--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>跳转页面</title>
   <script>
-    window.location.href = "http://61.171.51.135:20024/";
+    window.location.href = "http://61.171.51.135:20024/index.html";
   </script>
 </head>
 
